--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Um dia aqui terá alguma coisa legal!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HigorC</title>
+    <script data-ad-client="ca-pub-8124908319321888" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+<body>
+    <h1>Um dia aqui terá alguma coisa legal!</h1>
+</body>
+</html>
