--- a/index.html
+++ b/index.html
@@ -1,12 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HigorC</title>
-    <script data-ad-client="ca-pub-8124908319321888" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-8124908319321888" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
+
 <body>
-    <h1>Um dia aqui terá alguma coisa legal!</h1>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <img src="http://p.favim.com/orig/2018/08/21/dog-meme-funny-Favim.com-6175948.png" alt="Minha Figura">	
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <div>
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+        Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal! Um dia aqui terá alguma coisa legal!
+    </div>
+    <img src="http://p.favim.com/orig/2018/08/21/dog-meme-funny-Favim.com-6175948.png" alt="Minha Figura">	
 </body>
+
 </html>
